# setup-test

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/actions/build-wheel/: entrypoint.sh
.github/workflows/: build.yml  build_pip_index.py
src/: main.cpp  main.hpp
